fixed scrollbar

--- a/css/main.scss
+++ b/css/main.scss
@@ -9,22 +9,24 @@ input[type=number] {
     -moz-appearance:textfield;
 }
 
+
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
     background-color: #f5f5f5;
 }
 
-::-webkit-scrollbar {
-    width: 10px;
-    background-color: #f5f5f5;
-}
+
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: #373d3f;
 } 
- 
+
+::-webkit-scrollbar{
+    width: 15px;
+}
+
 .header {
     display: flex;
     flex-direction: column;
@@ -114,7 +116,8 @@ body {
     display: flex;
     justify-content: space-evenly;
 
-    
+    overflow: hidden;
+
     .img_header{
         margin: auto;
 
@@ -126,15 +129,14 @@ body {
             margin-top: 2em;
         }
     }
-   
-    ::-webkit-scrollbar {
-        width: 0px;
-        //background: transparent; /* make scrollbar transparent */
-    }
     
     height: 100vh;
 }
 
+*{
+    margin: 0;
+    
+}
 
 // highlight slider values 
 
@@ -144,8 +146,11 @@ body {
     color: #444;
     
     display: flex;
-   /*  flex: 1 1 auto; */
-    overflow: auto;
+    flex: 1 1 auto;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    
+   
 
     margin-left: 2em;
     align-items: center;
@@ -153,7 +158,7 @@ body {
     /* height: 100%;
     width: 100%; */
     padding-bottom: 2em;
-
+    
     table {
         margin-top: 2em !important;
         background-color: #f5f5f5;
